--- a/index.html
+++ b/index.html
@@ -1,1 +1,23 @@
-
+<!DOCTYPE html>
+<html>
+  <head>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Cabin&display=swap" rel="stylesheet">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width">
+    <title>SkribblX</title>
+    <link href="style.css" rel="stylesheet" type="text/css" />
+  </head>
+  <body>
+    <script src="script.js"></script>
+    <center>
+    <ul>
+  <li><a href="/index.html">Discover</a></li>
+  <li><a href="other/comingsoon.html"></a></li>
+  <li style="float:right"><a class="active" href="other/comingsoon.html">Profile</a></li>
+</ul>
+<h1>Start a New Era of Gaming</h1>
+<footer> <p>© 2021 Retrobox</p> </footer>
+</center>
+  </body>
+</html>
