--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Cabin&display=swap" rel="stylesheet">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <title>SkribblX</title>
+    <title>Retrobox Gaming</title>
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
