--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <li><a href="other/comingsoon.html"></a></li>
   <li style="float:right"><a class="active" href="other/comingsoon.html">Profile</a></li>
 </ul>
-<h1>Start a New Era of Gaming</h1>
+<h1>The Home of the Gaming World</h1>
 <footer> <p>© 2021 Retrobox</p> </footer>
 </center>
   </body>
