--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
   <li style="float:right"><a class="active" href="other/comingsoon.html">Profile</a></li>
 </ul>
 <h1>The Home of the Gaming Nation</h1>
+<a href="/index.html" target="_self"><div class="custom-btn">Sign up</div></a>
+<a href="/index.html" target="_self"><div class="custom-btn">Log in</div></a>
 <footer> <p>© 2021 Retrobox</p> </footer>
 </center>
   </body>
