--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
   <li><a href="other/comingsoon.html"></a></li>
   <li style="float:right"><a class="active" href="other/comingsoon.html">Profile</a></li>
 </ul>
+      <div style="background-image: url('https://art.ngfiles.com/images/653000/653687_arzonaut_background-2.png?f1540196471');">
 <h1>The Home of the Gaming Nation</h1>
 <a href="/index.html" target="_self"><div class="custom-btn">Sign up</div></a>
       <p>or</p>
