--- a/index.html
+++ b/index.html
@@ -12,6 +12,14 @@
     <script src="script.js"></script>
     <center>
    <div style="background-image: url('https://art.ngfiles.com/images/653000/653687_arzonaut_background-2.png?f1540196471');">
+     <style>
+body {
+  background-image: url('https://art.ngfiles.com/images/653000/653687_arzonaut_background-2.png?f1540196471');
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
+}
+</style>
     <ul>
   <li><a href="/index.html">Discover</a></li>
   <li><a href="other/comingsoon.html"></a></li>
