--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@ body {
 <a href="/index.html" target="_self"><div class="custom-btn">Sign up</div></a>
       <p>or</p>
 <a href="/index.html" target="_self"><div class="custom-btn">Log in</div></a>
+ <p>Or add our <a href="">Discord Bot</a>
 <footer> <p>© 2021 Retrobox</p> </footer>
 </center>
   </body>
