--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ body {
       <p>or</p>
 <a href="/index.html" target="_self"><div class="custom-btn">Log in</div></a>
  <p>Or add our <a href="">Discord Bot</a>
-   <img>https://i.pinimg.com/originals/d4/aa/32/d4aa32caae17585870520accda5f9865.jpg</img>
+   <img href= https://i.pinimg.com/originals/d4/aa/32/d4aa32caae17585870520accda5f9865.jpg</img>
 <footer> <p>© 2021 Retrobox</p> </footer>
 </center>
   </body>
