--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ body {
       <p>or</p>
 <a href="/index.html" target="_self"><div class="custom-btn">Log in</div></a>
  <p>Or add our <a href="">Discord Bot</a>
- <img src="https://i.pinimg.com/originals/d4/aa/32/d4aa32caae17585870520accda5f9865.jpg" alt="Snek l o l" style="width:42px;height:42px;"></a>
+ <img src="https://i.pinimg.com/originals/d4/aa/32/d4aa32caae17585870520accda5f9865.jpg" alt="Snek l o l" style="width:200px;height:200x;"></a>
 <footer> <p>© 2021 Retrobox</p> </footer>
 </center>
   </body>
