--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@ body {
  <p>Or add our <a href="">Discord Bot</a>
    <hr>
  <img src="https://i.pinimg.com/originals/d4/aa/32/d4aa32caae17585870520accda5f9865.jpg" alt="Snek l o l" style="width:200px;height:200x;"></a>
+    <h1>The Game of Snek</h1>
+    <p>An original game</p>
+    
     </hr>
 <footer> <p>© 2021 Retrobox</p> </footer>
 </center>
