--- a/index.html
+++ b/index.html
@@ -32,10 +32,7 @@ body {
    <hr>
  <img src="https://i.pinimg.com/originals/d4/aa/32/d4aa32caae17585870520accda5f9865.jpg" alt="Snek l o l" style="width:200px;height:200x;"></a>
     <h1>The Game of Snek</h1>
-    <a href="/index.html" target="_self"><div class="custom-btn">Play Now</div></a>
-    <script>
-      alert("text")
-    </script>
+    <a href="/exclusive.html" target="_self"><div class="custom-btn">Play Now</div></a>
     </hr>
 <footer> <p>© 2021 Retrobox</p> </footer>
 </center>
