--- a/exclusive.html
+++ b/exclusive.html
@@ -1,3 +1,10 @@
     <script>
       alert("This game is exclusive to the Discord Bot, press OK to add the bot to your server.")
     </script>
+    <script type="text/javascript">
+    function redirect()
+    {
+    var url = "http://www.hello.com";
+    window.location(url);
+    }
+    </script>
