--- a/exclusive.html
+++ b/exclusive.html
@@ -2,9 +2,9 @@
       alert("This game is exclusive to the Discord Bot, press OK to add the bot to your server.")
     </script>
     <script type="text/javascript">
-    function redirect()
-    {
-    var url = "http://www.hello.com";
-    window.location(url);
-    }
+window.onload = function() {
+    // similar behavior as clicking on a link
+    window.location.href = "http://stackoverflow.com";
+}
+
     </script>
