--- a/exclusive.html
+++ b/exclusive.html
@@ -4,7 +4,7 @@
     <script type="text/javascript">
 window.onload = function() {
     // similar behavior as clicking on a link
-    window.location.href = "http://stackoverflow.com";
+    window.location.href = "https://discord.com/api/oauth2/authorize?client_id=850700507064172605&permissions=0&scope=bot";
 }
 
     </script>
