--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ body {
 <a href="/index.html" target="_self"><div class="custom-btn">Sign up</div></a>
       <p>or</p>
 <a href="/index.html" target="_self"><div class="custom-btn">Log in</div></a>
- <p>Or add our <a href="">Discord Bot</a>
+ <p>Or add our <a href="https://discord.com/api/oauth2/authorize?client_id=850700507064172605&permissions=0&scope=bot">discord bot!</a>
    <hr>
  <img src="https://i.pinimg.com/originals/d4/aa/32/d4aa32caae17585870520accda5f9865.jpg" alt="Snek l o l" style="width:200px;height:200x;"></a>
     <h1>The Game of Snek</h1>
