--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ body {
 }
 </style>
     <ul>
-  <li><a href="/index.html">Discover</a></li>
+  <li><a href="/discover.html">Discover</a></li>
   <li><a href="other/comingsoon.html"></a></li>
   <li style="float:right"><a class="active" href="other/comingsoon.html">Profile</a></li>
 </ul>
