--- a/exclusive.html
+++ b/exclusive.html
@@ -1,10 +1,10 @@
     <script>
-      alert("This game is exclusive to the Discord Bot, press OK to add the bot to your server.")
+      alert("This game is currently locked. By pressing OK, you will be redirected to the Discover page.")
     </script>
     <script type="text/javascript">
 window.onload = function() {
     // similar behavior as clicking on a link
-    window.location.href = "https://discord.com/api/oauth2/authorize?client_id=850700507064172605&permissions=0&scope=bot";
+    window.location.href = "https://retrobox.netlify.app/discover.html";
 }
 
     </script>
