--- a/discover.html
+++ b/discover.html
@@ -42,7 +42,7 @@ body {
 }
 </style>
     <h1>Flappy Borb</h1>
-    <a href="/exclusive.html" target="_self"><div class="custom-btn">Play Now</div></a>
+    <a href="https://thegamebox.netlify.app/flappyborb.html" target="_self"><div class="custom-btn">Play Now</div></a>
     </hr>
 <footer> <p>© 2021 Retrobox</p> </footer>
 </center>
