--- a/discover.html
+++ b/discover.html
@@ -41,7 +41,7 @@ body {
     animation: float 3s ease-in-out infinite;
 }
 </style>
-    <h1>Flappy Borb</h1>
+    <h1>Flappy Bird</h1>
     <a href="https://thegamebox.netlify.app/flappyborb.html" target="_self"><div class="custom-btn">Play Now</div></a>
     </hr>
 <footer> <p>© 2021 Retrobox</p> </footer>
